--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -28,7 +28,7 @@
                     <th />
                     {% for date, day in week %}
                         <th>{{ cal.day_name[day] }}
-                            <div class="text-muted" id="day-{{ date }}">{{ date }}</div>
+                            <div class="text-muted" id="{{ day }}-{{ date }}">{{ date }}</div>
                         </th>
                     {% endfor %}
                 </thead>
@@ -36,7 +36,7 @@
                     {% for hour in range(24) %}
                         <tr>
                             <td style="padding: 0.5em">{{ hour }}</td>
-                            {% for num in range(7) %}
+                            {% for date, day in week %}
                                 <td id="days">
                                     {% for event in events %}
                                         {% if event[2] == month or event[7] == month %}
